# AgentProbe

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  FORGE.md  MARKETING.md  Makefile  README.md  VISION.md  admin.py  dogfood_results.json  example.py  fly.toml  migrate_domain.py  pyproject.toml  quickstart.py  setup_stripe.py  test_billing.py  test_certification.py  test_dogfood.py  test_forge.py  test_production.py  test_real_agent.py  test_systems.py  update_pricing.py  upgrade_backend.py  upgrade_frontend.py
.github/workflows/: ci.yml
agentprobe/: __init__.py  adapters.py  system_templates.py  templates.py
api/: scheduler.py  server.py
billing/: __init__.py  agentprobe.db-shm  agentprobe.db-wal  payfast_integration.py  stripe_integration.py
certification/: __init__.py  certifications.db
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  ForgeView.jsx  config.js  index.css
examples/: github-actions.yml  gitlab-ci.yml  webhook_examples.py
forge/: __init__.py  analyzer.py  evaluator.py  generator.py  importer.py  routes.py
tests/: test_sdk.py
