[project]
name = "agentprobe"
version = "0.1.0"
description = "The Selenium/Cypress for AI Agents — automated testing and evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "testing", "agents", "evaluation", "llm"]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
